--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Typing Game Test</title>
   </head>
   <body>
+    <div>Time Left <span id="time"></span> </div>
     <script src="app.js"></script>
   </body>
 </html>
