Check is working and detecting input from page.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Typing Game Test</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Juicy Typing Master</title>
   </head>
-  <body>
-    <script src="app.js"></script>
+  <body class="container">
+    <section id="mainElements">
+    <section class="container">
+      <p id="textBlock">Text here</p>
+    </section>
+    <section class="container">
+      <!-- timer -->
+    </section>
+    <section class="container" id="formAll">
+      <form>
+        <input type="text" size="50" id="formText">
+      </form>
+    </section>
+    <section>
+      <p id="formResults"></p>      
+    </section>
+    </section>
+    <script src="checker.js"></script>
   </body>
 </html>
