Game app now basically functional. OR, basic function in place.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
       </form>
     </section>
     <section>
+      <button id="startButton">Press to Start</button>
+    </section>
+    <section>
       <p id="formResults"></p>
     </section>
     </section>
-    <script src="checker.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
