Bug where multiple rounds are played at once is fixed. Still have the double-submit bug.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <section class="container">
       <!-- timer -->
     </section>
-    <section class="container" id="formAll">
-      <form>
+    <section class="container">
+      <form id="formAll">
         <input type="text" size="70" id="formText">
       </form>
     </section>
     <section>
-      <button id="startButton">Press to Start</button>
+      <p id="buttonHolder"></p>
     </section>
     <section>
       <p id="formResults"></p>
