Textbox no longer generates history.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </section>
     <section class="container">
       <form id="formAll">
-        <input type="text" size="70" id="formText">
+        <input type="text" size="70" autocomplete="off" id="formText">
       </form>
     </section>
     <section>
