--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
+    <!-- <script src="./Vendors/Rita/rita-full.js"></script> -->
     <title>Juicy Typing Master</title>
   </head>
-  <body class="container">
-    <section id="mainElements">
+  <body class="background_white" id="mainBody">
+    <section class="container" id="mainElements">
+    <section>
+      <p id="minionHolder">Minion goes here.</p>
+    </section>
     <section class="container">
       <p id="textBlock">Text here</p>
     </section>
