Basic timer functionality added and working

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Typing Game Test</title>
   </head>
   <body>
-    <div>Time Left <span id="time"></span> </div>
+    <div>Time Left <button id="timerStart">Start</button><button id="timerStop">Stop</button><span></span> </div>
+    <p id="timer"></p>
     <script src="app.js"></script>
   </body>
 </html>
