Timer intigrated into game and functioning

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p id="textBlock">Text here</p>
     </section>
     <section class="container">
-      <!-- timer -->
+      <p id="timer"></p>
     </section>
     <section class="container">
       <form id="formAll">
@@ -24,7 +24,7 @@
       </form>
     </section>
     <section>
-      <p id="buttonHolder"></p>
+      <p id="buttonHolder"> </p>
     </section>
     <section>
       <p id="formResults"></p>
