Basic sentence builder sort of working.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <p id="formResults"></p>
     </section>
     </section>
+    <script src="text.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
