--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!-- <script src="./Vendors/Rita/rita-full.js"></script> -->
     <title>Juicy Typing Master</title>
   </head>
-  <body id="stage">
-    <section class="container" id="mainElements">
+  <body class="stage" id="mainBody">
+    <section class="container background_white" id="mainElements">
     <section>
       <p id="minionHolder">Minion goes here.</p>
     </section>
@@ -28,9 +28,9 @@
       <p id="formResults"></p>
     </section>
     </section>
-    <div id="traveler">
+    <!-- <div id="traveler">
       <div id="bouncer"><img src="images/ogre_club.png"></div>
-    </div>
+    </div> -->
     <script src="text.js"></script>
     <script src="app.js"></script>
   </body>
