--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="susan.css">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
     <!-- <script src="./Vendors/Rita/rita-full.js"></script> -->
     <title>Juicy Typing Master</title>
   </head>
   <body class="background_white" id="mainBody">
+    <div>
+      <img class="surfer" src="http://www.springville.org/art-city-days/files/2012/04/rubberduck.jpg">
+    </div>
     <section class="container" id="mainElements">
     <section>
       <p id="minionHolder">Minion goes here.</p>
