--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Juicy Typing Master</title>
   </head>
   <body class="stage" id="mainBody">
-    <img class="zoomIn" id="zoomer" src="images/shrek.jpg" hidden>
-    <img class="surf" id="surfer" src="images/rubberduck.jpg" hidden>
+    <img class="pop" id="popAttack" src="" hidden>
+    <img class="surf" id="surfAttack" src="" hidden>
     <section class="container background_white" id="mainElements">
     <section>
-      <p id="minionHolder">Minion goes here.</p>
+      <p><img id="minionHolder" src=""></p>
     </section>
     <section class="container textBox">
       <p id="textBlock">Text here</p>
@@ -32,7 +32,7 @@
     </section>
     </section>
     <div id="traveler">
-      <div id="bouncer" hidden><img src="images/ogre_club.png"></div>
+      <div id="bouncer"><img id="bounceAttack" src="" hidden></div>
     </div>
     <script src="text.js"></script>
     <script src="app.js"></script>
