--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Juicy Typing Master</title>
   </head>
   <body class="stage" id="mainBody">
-    <img class="pop" id="popAttack" src="" hidden>
-    <img class="surf" id="surfAttack" src="" hidden>
-    <section class="container background_white" id="mainElements">
+    <object class="pop" id="popAttack" data="" hidden></object>
+    <object class="surf" id="surfAttack" data="" hidden></object>
+    <section class="container" id="mainElements">
     <section>
       <p><img id="minionHolder" src=""></p>
     </section>
@@ -32,7 +32,7 @@
     </section>
     </section>
     <div id="traveler">
-      <div id="bouncer"><img id="bounceAttack" src="" hidden></div>
+      <div id="bouncer"><object id="bounceAttack" data="" hidden></object></div>
     </div>
     <script src="text.js"></script>
     <script src="app.js"></script>
