--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <object class="surf" id="surfAttack" data="" hidden></object>
     <section class="container" id="mainElements">
     <section>
-      <p><img id="minionHolder" src=""></p>
+      <p><img class="" id="minionHolder" src=""></p>
     </section>
     <section class="container textBox">
-      <p id="textBlock">Text here</p>
+      <p class="" id="textBlock">Text here</p>
     </section>
     <section class="container">
       <p id="timer"></p>
