Basic framework complete

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <object class="surf" id="surfAttack" data="" hidden></object>
 
     <section class="container" id="upperElements">
-      <img class="" id="minionHolder" src="images/ogre.jpg">
+      <img class="" id="minionHolder" src="images/typingmaster.jpg">
       <section id="minionBubble">
         <img id="speechBubble" src="images/speechbubble.png">
         <p class="" id="minionSpeech">I am a minion!</p>
