Final boss and final attack complete

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="container" id="lowerElements">
-      <p class="" id="textBlock">Text here</p>
+      <p class="rainbow" id="textBlock">Text here</p>
       <p id="timer"></p>
       <input type="text" size="100" autocomplete="off" id="formText">
       <p id="buttonHolder"></p>
@@ -32,45 +32,3 @@
     <script src="app.js"></script>
   </body>
 </html>
-
-
-
-
-
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <title>Juicy Typing Master</title>
-  </head>
-  <body class="stage" id="mainBody">
-    <object class="pop" id="popAttack" data="" hidden></object>
-    <object class="surf" id="surfAttack" data="" hidden></object>
-    <section class="container" id="mainElements">
-    <section>
-      <p><img class="" id="minionHolder" src=""></p>
-    </section>
-    <section class="container textBox">
-      <p class="" id="textBlock">Text here</p>
-    </section>
-    <section class="container">
-      <p id="timer"></p>
-    </section>
-    <section class="container">
-      <input type="text" size="100" autocomplete="off" id="formText">
-    </section>
-    <section>
-      <p id="buttonHolder"></p>
-    </section>
-    <section>
-      <p id="formResults"></p>
-    </section>
-    </section>
-    <div id="traveler">
-      <div id="bouncer"><object id="bounceAttack" data="" hidden></object></div>
-    </div>
-    <script src="text.js"></script>
-    <script src="app.js"></script>
-  </body>
-</html> -->
