Minion attacks fixed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="container" id="lowerElements">
-      <p class="rainbow" id="textBlock">Text here</p>
+      <p class="" id="textBlock">Text here</p>
       <p id="timer"></p>
       <input type="text" size="100" autocomplete="off" id="formText">
       <p id="buttonHolder"></p>
