have to commit because Git

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img class="" id="minionHolder" src="images/typingmaster.jpg">
       <section id="minionBubble">
         <img id="speechBubble" src="images/speechbubble.png">
-        <p class="" id="minionSpeech">I am a minion!</p>
+        <p class="" id="minionSpeech">So you wish to challenge Me-ow, the Typing master? You will have to be face my Minions first. Don't let them distract you.</p>
       </section>
     </section>
 
