CSS borders off, some other tweaks, minion defeat text added but not coded.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <img class="" id="minionHolder" src="images/typingmaster.jpg">
       <section id="minionBubble">
         <img id="speechBubble" src="images/speechbubble.png">
-        <p class="" id="minionSpeech">I am a minion!</p>
+        <p class="" id="minionSpeech"></p>
       </section>
     </section>
 
     <section class="container" id="lowerElements">
       <p class="" id="textBlock">Text here</p>
       <p id="timer"></p>
-      <input type="text" size="100" autocomplete="off" id="formText">
+      <input type="text" size="110" autocomplete="off" id="formText">
       <p id="buttonHolder"></p>
       <p id="formResults"></p>
     </section>
