--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <input type="text" size="110" autocomplete="off" id="formText">
       <p id="buttonHolder"></p>
       <p id="formResults"></p>
+      <p id="credits">Thanks to Terry Pratchett's <em>Guards! Guards!</em> for the text used in this app.
     </section>
     <div id="traveler">
       <div id="bouncer"><object id="bounceAttack" data="" hidden></object></div>
